Fix vertical alignment of title text

--- a/client/styles/components/_toolbar.scss
+++ b/client/styles/components/_toolbar.scss
@@ -71,6 +71,7 @@
 	}
 	margin-left: #{10 / $base-font-size}rem;
 	padding-left: #{10 / $base-font-size}rem;
+	padding-top: #{10 / $base-font-size}rem;
 	height: 70%;
   display: flex;
   align-items: center;
